--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "langchain>=0.3.26",
+    "langchain-community>=0.3.26",
+    "pydantic-settings>=2.10.0",
+    "qdrant-client>=1.14.3",
     "sentence-transformers>=4.1.0",
 ]
 
@@ -43,6 +46,9 @@ exclude = [
     "dist",
     "*.egg-info",
 ]
+
+[tool.ruff.format]
+quote-style = "single"
 
 [tool.ruff.per-file-ignores]
 # Allow unused imports in __init__.py files
